# GBAEmulator

./: .gitignore  .gitlab-ci.yml  Makefile  impl.tcl  post_synth_checkpoint.dcp  result.xml  synth.tcl  test.tcl  vivado_impl.tcl  vivado_script.tcl
constraints/: README.md
reports/: README.md
src/: ARM7Core.sv  BarrelShifter.sv  BranchHandler.sv  ClockHandler.sv  GBA.sv  README.md  Top.sv  registerFile.sv
src/ALU/: ALU.sv  AddModuleALU.sv  BoothMultiplier32Bit.v  SubtractModuleALU.sv
src/InstructionDecoder/: ConditionDecoder.sv  DataProcessingPSRInstructionDecoder.sv  InstructionDecoder.sv
src/Test/: Ander.sv
src/Tests/: AnotherTest.sv
src/Utilities/: InstructionTypes.sv
tb/: CMakeLists.txt  Testbench.sv  common.cpp  input.vc  test.cpp  top.cpp
tb/InstructionDecoder/: CMakeLists.txt  DataProcessingPSRInstructionTests.cpp  InstructionDecoderTest.cpp  InstructionDecoderTypes.cpp  InstructionDecoderTypes.h
